# rs_ffmpeg

./: Cargo.toml  README.md  build.rs
examples/: concat_mul_mp4.rs  concat_mul_mp4_ffi.rs  dump_av_info.rs  slice_mp4.rs  stitching_mul_mp4.rs  stitching_mul_mp4_avfilter.rs
examples/docs/: stitching_mul_mp4.drawio
src/: error.rs  lib.rs  macros.rs
src/avcodec/: bitstream.rs  codec.rs  codec_par.rs  packet.rs  parser.rs
src/avfilter/: avfilter.rs
src/avformat/: avformat.rs  avio.rs
src/avutil/: audio_fifo.rs  channel_layout.rs  dict.rs  error.rs  file.rs  frame.rs  imgutils.rs  media_type.rs  mem.rs  opt.rs  pixdesc.rs  pixfmt.rs  rational.rs  samplefmt.rs  timestamp.rs  utils.rs
src/ffmpeg_ffi/: binding.rs  mod.rs
src/ffmpeg_ffi/avutil/: _avutil.rs  common.rs  error.rs  pixfmt.rs  rational.rs
src/shared/: mod.rs
src/swresample/: swresample.rs
src/swscale/: swscale.rs  utils.rs
tests/: av_spliter.rs  avio_reading.rs  avio_writing.rs  decode_audio.rs  decode_video.rs  encode_video.rs  extract_mvs.rs  image_dump.rs  metadata.rs  remux.rs  thumbnail.rs  transcode.rs  transcode_aac.rs  tutorial01.rs
tests/output/av_spliter/: out_audio_bear.aac
tests/output/decode_audio/: sample1_short.pcm
tests/output/decode_video/: centaur-254.pgm  centaur-255.pgm  centaur-256.pgm  centaur-257.pgm  centaur-258.pgm  centaur-259.pgm  centaur-269.pgm  centaur-270.pgm  centaur-271.pgm  centaur-272.pgm  centaur-273.pgm  centaur-274.pgm  centaur-275.pgm  centaur-276.pgm  centaur-277.pgm  centaur-278.pgm  centaur-279.pgm  centaur-280.pgm  centaur-281.pgm  centaur-282.pgm  (+24 more)
(+20 files in other folders)
