[package]
name = "rs_ffmpeg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.152"
paste = "1.0.14"
thiserror = "1.0.56"

[dev-dependencies]
once_cell = "1.19.0"
camino = "1.1.6"
anyhow = "1.0.79"
cstr = "0.2.11"
tempdir = "0.3.7"

[build-dependencies]
bindgen = "0.69.2"
camino = "1.1.6"
num_cpus = "1.16.0"
once_cell = "1.19.0"
# cfg(not(windows))
pkg-config = "0.3.29"

[features]
default = ["ffmpeg6"]
# FFmpeg 6.* support
ffmpeg6 = []